# clover

./: .bashrc  A.java  AUTHORS  AccessMode.clo  Array$1.clo  Block.clo  Bytes.clo  CHANGELOG  CantSolveGenericsType.clo  Class.clo  ClassNotFoundException.clo  Clover#2.clo  Clover.cl  Clover.clc  Clover.clo  Command#2.clo  Command.clo  ComparableModule.clm  Completion.clc  ConstructorModule.clm  ConvertingStringCodeException.clo  DIR.clo  Directory.clo  DivisionByZeroException.clo  Encoding.clo  Enum.clo  Exception.clo  Field.clo  File.clo  FileAccess.clo  FileBase.clo  FileKind.clo  FileLockOperation.clo  FileMode.clo  FnmatchFlags.clo  Foudamental.cl  Fundamental.cl  Fundamental.clc  GenericsParam0.clo  GenericsParam1.clo  (+160 more)
cclover.dSYM/Contents/: Info.plist
cclover.dSYM/Contents/Resources/DWARF/: cclover
cl_files/: ExtendsAndClassMethod.cl  MyClass2.cl  MyClass8.cl  NewTest.clm  Test.java  TestArray.clm  TestExtends.cl  TestGenerics.cl  TestGenerics.clm  TestNameSpace.cl  TestNameSpace.clm  TestOpenClass.cl  TestOperatorMethod.cl
code/: A.java  Accessor.cl  Accessor.clc  AccessorMethod.cl  Array.cl  Array.clm  CallByValueTest.cl  CallByValueTest.clc  Exception.cl  Exception2.cl  Extends.cl  Extends.clc  Extends.clm  Generics.cl  Generics.clm  HelloWorld.cl  HelloWorld.clm  HelloWorld2.cl  Inherit.cl  Inherit.clc  Inherit.clm  LoadClassTest.clc  ModuleTest.cl  ModuleTest.clc  ModuleTest2.clc  NameSpace.cl  NameSpace.clm  New.cl  New.clc  New.clm  OpenClass.cl  OpenClass.clc  OpenClass.clm  Operand.cl  Operand.clc  Operand.clm  OperatorMethod.cl  OperatorMethod.clc  OperatorMethod.clm  StringTest.java  (+309 more)
code.bak/: A.java  a.cl.bak  accessor.cl.bak  accessor_method.cl.bak  accessor_method.clc  array.cl.bak  block.rb  block_test.cl  block_test.cl.bak  byte.cl  byte.cl.bak  bytes.cl  bytes.cl.bak  continue_test.cl.bak  exception.cl.bak  exception.clc  exception2.cl  exception2.cl.bak  exception_simple.cl.bak  extends.cl.bak  extends_and_class_method.cl.bak  field_initializer.cl.bak  field_initializer2.cl  field_initializer2.cl.bak  field_initializer2.clc  file.cl  file.cl.bak  generics.cl.bak  hello.cs  hello_world.cl  hello_world.cl.bak  hello_world2.cl.bak  if_test.cl  if_test.cl.bak  inherit.cl.bak  inherit_with_block.cl.bak  instanceof.cl  instanceof.cl.bak  int.cl  int.cl.bak  (+49 more)
code2/: my_array.cl  my_array.clc  my_int.cl  my_int.clc
iclover.dSYM/Contents/: Info.plist
iclover.dSYM/Contents/Resources/DWARF/: iclover
man/man1/: clover.1
man/man3/: clover.3
samples/: GenericsTest.cl
src/: alias.c  array.c  block.c  bool.c  buffer.c  byte.c  bytes.c  c.cl  c_to_clover.c  class_name.c  clover.c  clover.h  clover2llvm.c  common.h  compile.c  compile_data.c  compiler.c  compiler.c.bak  debug.c  debug.h  editline.c  errmsg.c  file.c  float.c  hash.c  hash.h  heap.c  int.c  interface.c  interpreter.c  klass.c  klass.c.bak  klass_ctime.c  llcompiler.c  load_class.c  main.c  module.c  mutex.c  namespace.c  node.c  (+69 more)
test/: GenericsTest.cl  MyClass.cl  MyClass.clo  MyClass2.cl  MyClass3.cl  MyClass4.cl  MyClass5.cl
txt/: TODO.txt
