AC_INIT(src/main.c)

AC_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_PROG_INSTALL

if test $prefix = NONE
then
    myprefix=/usr/local
else
    myprefix=$prefix
fi

######################################################################
# configure arguments
######################################################################
DEBUGGING=0

AC_ARG_WITH(debug,              [  --with-debug              include debug info ], [ DEBUGGING=1; ], [])
AC_ARG_WITH(gprof-debug,        [  --with-gprof-debug        include debug info and gprof debug info ], [ DEBUGGING=2; ], [])
AC_ARG_WITH(optimize,          [  --with-optimize           with optimize(-O in CFLAGS) ], [ ENABLE_OPTIMIZE=1 ], [ ENABLE_OPTIMIZE=0 ])
AC_ARG_WITH(onig-dir,           [  --with-onig-dir=DIR       set install prefix of oniguruma which located at non standerd directory and installed by user ], [ ONIG_DIR="$withval"; ], [ ONIG_DIR=; ])
AC_ARG_WITH(static,[ --with-static       link xyzsh used libraries with static to make xyzsh doesn't require any libraries.], [ STATIC_LINK=1 ], [STATIC_LINK= ] )

#####################################################################
# check operating systems
#####################################################################
SO_VERSION=1.0.0
AC_SUBST(SO_VERSION)
AC_MSG_CHECKING(Operating System)

OBJ="src/main.o src/parser.o src/vm.o src/debug.o src/editline.o src/xfunc.o src/interface.o src/hash.o src/klass.o"

AC_SUBST(OBJ)

CFLAGS='-DSYSCONFDIR="\"${sysconfdir}/\"" -DDOCDIR="\"${docdir}/\"" -DDATAROOTDIR="\"${datarootdir}/\""'

if test `uname -s` = "Darwin"; then
    echo "Darwin"

    OS=DARWIN

    AC_DEFINE(__DARWIN__, 1)

    LIBSONAME=libclover.dylib
    LIBSO2NAME=libclover.$SO_VERSION.dylib

    CFLAGS="-Isrc/ -I. -L. -I$myprefix/include -L$myprefix/lib -fPIC $CFLAGS"
elif test `uname -s` = "SunOS"; then
    echo "SunOS"

    OS=SUNOS

    AC_DEFINE(__SUNOS__, 1)

    LIBSONAME=libclover.so
    LIBSO2NAME=libclover.so.$SO_VERSION

    CFLAGS="-Isrc/ -I. -L. -I$myprefix/include -L$myprefix/lib -fPIC $CFLAGS"
elif test `uname -s` = "FreeBSD"; then
    echo "FreeBSD"

    OS=FREEBSD

    AC_DEFINE(__FREEBSD__, 1)

    LIBSONAME=libclover.so
    LIBSO2NAME=libclover.so.$SO_VERSION

    CFLAGS="-Isrc/ -I. -L. -I$myprefix/include -L$myprefix/lib -fPIC $CFLAGS"
elif uname -s | grep -q CYGWIN_NT; then
    echo CYGWIN

    OS=CYGWIN

    AC_DEFINE(__CYGWIN__, 1)

    LIBSONAME=libclover.so
    LIBSO2NAME=libclover.so.$SO_VERSION

    CFLAGS="-Isrc/ -I. -L. -I$myprefix/include -L$myprefix/lib $CFLAGS"
else
    echo "Linux"

    OS=LINUX

    AC_DEFINE(__LINUX__, 1)

    LIBSONAME=libclover.so
    LIBSO2NAME=libclover.so.$SO_VERSION

    CFLAGS="-Isrc/ -I. -L. -I$myprefix/include -L$myprefix/lib -fPIC $CFLAGS"
    LIBS="$LIBS -lutil"
fi


##########################################################################
# CFLAGS settings
##########################################################################
if test -d /usr/local/include
then
    CFLAGS="$CFLAGS -I/usr/local/include"
fi

if test -d /usr/local/lib
then
    CFLAGS="$CFLAGS -L/usr/local/lib"
fi

if test -d /opt/local/include
then
    CFLAGS="$CFLAGS -I/opt/local/include"
fi

if test -d /opt/local/lib
then
    CFLAGS="$CFLAGS -L/opt/local/lib"
fi

if test -n "$ONIG_DIR"
then
    if test -e "$ONIG_DIR/include/oniguruma.h" && test -e "$ONIG_DIR/lib/libonig.a"
    then
         CFLAGS="$CFLAGS -I$ONIG_DIR/include -L$ONIG_DIR/lib"
    else
        echo "can't found oniguruma.h in $ONIG_DIR/include or libonig.a in $ONIG_DIR/lib"
    fi
fi

if test $ENABLE_OPTIMIZE = 1
then
    CFLAGS="$CFLAGS -O3"
fi

if test $DEBUGGING = 1
then
    #CFLAGS="$CFLAGS -g -DMDEBUG"
    CFLAGS="$CFLAGS -g -Werror -DMDEBUG"
elif test $DEBUGGING = 2
then
    CFLAGS="$CFLAGS -pg -Werror"
else
    CFLAGS="$CFLAGS"
fi

if test "$STATIC_LINK" = 1
then
    CFLAGS="$CFLAGS -static"

    LIBANAME=libclover.a
    LIBSONAME=
    LIBSO2NAME=
fi

AC_SUBST(LIBANAME)
AC_SUBST(LIBSONAME)
AC_SUBST(LIBSO2NAME)
AC_SUBST(CFLAGS)

##########################################################
# environmnet variables
##########################################################
CC=gcc
INSTALL="/usr/bin/install -c"

#####################################################################
# ncurses settings
#####################################################################
AC_CHECK_HEADER(ncurses.h, [NCURSES_OK=1; AC_DEFINE(HAVE_NCURSES_H, 1)])
AC_CHECK_HEADER(ncurses/ncurses.h, [NCURSES_OK=1; AC_DEFINE(HAVE_NCURSES_NCURSES_H, 1)])
AC_HAVE_LIBRARY(cursesw, [ LIBS="$LIBS -lcursesw"; NCURSES_OK2=1 ])
AC_HAVE_LIBRARY(ncursesw, [ LIBS="$LIBS -lncursesw"; NCURSES_OK2=1 ])

if test -z "$NCURSES_OK2"
then
    AC_HAVE_LIBRARY(curses, [ LIBS="$LIBS -lcurses"; NCURSES_OK2=1 ])
    AC_HAVE_LIBRARY(ncurses, [ LIBS="$LIBS -lncurses"; NCURSES_OK2=1 ])
fi

if test -z "$NCURSES_OK"
then
    exit
fi

if test -z "$NCURSES_OK2"
then
    exit
fi

#####################################################################
# math settings
#####################################################################
AC_CHECK_HEADER(math.h, [AC_DEFINE(HAVE_MATH_H,1)], [ exit ])
AC_HAVE_LIBRARY(m, [ LIBS="$LIBS -lm"; ], [ exit ])

####################################################################
# iconv settings
####################################################################
AC_CHECK_HEADER(iconv.h, [AC_DEFINE(HAVE_ICONV_H, 1)], [ exit ])

if test "$OS" = CYGWIN|| test "$OS" = DARWIN || test "$OS" = FREEBSD
then
    LIBS="$LIBS -liconv"
fi

#####################################################################
# oniguruma settings
#####################################################################
AC_CHECK_HEADER(oniguruma.h, [AC_DEFINE(HAVE_ONIGURUMA_H, 1)], [ exit ])
AC_HAVE_LIBRARY(onig, [ LIBS="$LIBS -lonig"; ], [ exit ])

#####################################################################
# editline settings
#####################################################################
AC_CHECK_HEADER(histedit.h, [AC_DEFINE(HAVE_HISTEDIT_H, 1)], [ exit ])
AC_HAVE_LIBRARY(edit, [ LIBS="$LIBS -ledit"; ], [ exit ])

#####################################################################
# dl settings
#####################################################################
if test "$OS" != FREEBSD
then
    AC_HAVE_LIBRARY(dl, [ LIBS="$LIBS -ldl"; ], [ exit ])
fi

#####################################################################
# nanosleep settings
#####################################################################
AC_CHECK_FUNCS(nanosleep, [AC_DEFINE(HAVE_NANOSLEEP, 1)], [])

AC_SUBST(LIBS)

##########################################################################
# type checking
###########################################################################
AC_EGREP_HEADER(OnigUChar, oniguruma.h, AC_DEFINE(HAVE_ONIGUCHAR))

AC_OUTPUT(Makefile)

